usepacke arydshln added for dashed line in tabular author updated

--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -8,6 +8,7 @@
 \usepackage{circuitikz}
 \usepackage{multicol}
 \usepackage{rotating}
+\usepackage{arydshln}
 \newcommand{\arraystretchOriginal}{1}
 
 \setDefaultArrayStretch{2}
@@ -15,7 +16,7 @@
 % Titel und Autor
 \title{DigSig1 Formelsammlung}
 \subtitle{Dozent: G.Schuster, Buch: Introduction to Signal Processing, Orfanidis}
-\author{Jürg Rast, Gian Claudio Köppel}
+\author{J.Rast, G.C.Köppel, S.Körner}
 
 
 \begin{document}
@@ -30,13 +31,16 @@
 \newpage
 
 \input{sections/RandomSignals}
+\newpage
 \input{sections/SamplingReconstruction}
 \input{sections/Quantization}
 \input{sections/DiscretTimeSystems}
 \input{sections/FIRFilteringConvolution}
 \input{sections/ZTransform}
+\newpage
 \input{sections/TransferFunctions}
 
+\newpage
 \section{Idiotenseite}
 \input{idiotenseite/trigo/subsections/Winkelargumente}
 \input{idiotenseite/trigo/subsections/Periodizitaet}
@@ -44,6 +48,7 @@
 \input{idiotenseite/trigo/subsections/Additionstheoreme}
 \input{idiotenseite/trigo/subsections/DoppelHalbwinkel}
 \input{idiotenseite/trigo/subsections/Produkte}
+\newpage
 \input{idiotenseite/trigo/subsections/SummeDifferenzen}
 \input{idiotenseite/trigo/subsections/Euler}
 \input{idiotenseite/diverses/subsections/Reihenentwicklung}
