--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -94,6 +94,8 @@ Some DTFT-Transforms: \\ \\
 	\hline
 \end{tabularx} \\ \\
 
+\newpage
+
 Some Z-Transforms:\\
 \begin{tabularx}{0.6\textwidth}{|X|X|X|}
 	\hline
