minor corrections, added SA conversion algorithms to A/D converters

--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -25,7 +25,7 @@ Sampling Theorem (Nyquist rate):
 Nyquist interval:
 \[ \left[-\frac{f_s}{2}, \frac{f_s}{2}\right] \]
 
-%The spectrum $X(f)$ of the sampled signal will be replicated
+%The spectrum $\hat{X}(f)$ of the sampled signal will be replicated
 %\[ \hat{X}(f) = \frac{1}{T} \sum_{m=-\infty}^{\infty}X(f-m f_s)\]
 
 
