--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -68,14 +68,50 @@ Performance of oversampling noise shaping quantizers:
 	& $\frac{R}{2} - Q$ 
 	\\ \hline
 	two's complement
-	& $x_Q = R(\overline{b_1} 2^{-1} + b_2 2^{-2} + \ldots + b_B 2^{-B} - 0.5) \qquad (\overline{b_1}=1-b_1$
-	& 
-	& 
+	& $x_Q = R(\overline{b_1} 2^{-1} + b_2 2^{-2} + \ldots + b_B 2^{-B} - 0.5) \qquad (\overline{b_1}=1-b_1)$
+	& $-\frac{R}{2}$ 
+	& $\frac{R}{2} - Q$ 
 	\\ \hline
 \end{tabularx}
 
 
 \subsection{A/D converters\buchSeite{75}}
+
+\subsubsection{Successive Approximation Converters}
+
+\begin{table}\centering
+\begin{tabular}{|p{0.45\textwidth}|p{0.45\textwidth}|}
+\hline
+	\multicolumn{2}{|c|}{\textbf{Conversion algorithms}}\\
+	\hline
+	\textbf{Natural and offset binary}
+		& \textbf{Two's complement}\\
+	\hline
+	if mode = rounding:\newline
+		\hspace*{0.5cm} $y = x + \frac{Q}{2}$\newline
+	else if mode = truncation:\newline
+		\hspace*{0.5cm} $y = x$\newline
+	for each $x$ to be converted, do:\newline
+		\hspace*{0.5cm} initialize $\mathbf{b}=[0,0,\dots ,0]$\newline
+		\hspace*{0.5cm} for $\mathbf{i}=1,2,\dots , B$ do:\newline
+		\hspace*{1cm}$b_i = 1$\newline
+		\hspace*{1cm}$x_Q = \text{dac}(\mathbf{b}, B, R)$\newline
+		\hspace*{1cm}$b_i = u(y-x_Q)$
+		& if mode = rounding: \newline
+		\hspace*{0.5cm} $y = x + \frac{Q}{2}$ \newline
+		else if mode = truncation: \newline
+		\hspace*{0.5cm} $y = x$ \newline
+		for each $x$ to be converted, do:\newline
+		\hspace*{0.5cm} initialize $\mathbf{b}=[0,0,\dots ,0]$\newline
+		\hspace*{0.5cm} $b_1 = 1- u(y)$ \newline
+		\hspace*{0.5cm} for $\mathbf{i}=2,3,\dots , B$ do:\newline
+		\hspace*{1cm}$b_i = 1$\newline
+		\hspace*{1cm}$x_Q = \text{dac}(\mathbf{b}, B, R)$\newline
+		\hspace*{1cm}$b_i = u(y-x_Q)$\\
+	\hline
+\end{tabular}
+\end{table}
+
 \subsection{Analog and digital dither\buchSeite{84-86}}
 Dither is a small white noise signal that is added to the input signal befor quantization. The variance of the noise is $\sigma_v^2$ and the variance of the quantization is $\sigma_e^2$. The total variance is :
 
