--- a/sections/RandomSignals.tex
+++ b/sections/RandomSignals.tex
@@ -32,7 +32,7 @@
 	autocorrelation function & 
 	$R_{XX}(k) = E[x(n+k)x(n)]	= \dfrac{1}{N}\sum\limits_{n=0}^{N-1-k} x(n+k)x(n) \newline
 	R_{XX}(k) = R_{XX}(-k) \newline
-	R_{XX}(0) = E(x^2)$
+	R_{XX}(0) = E(x^2)$ (dirac impulse at point zero)
 	\\ \hline
   power &
   $\sigma_x^2 = R_{XX}(0) = E\{x(n)^2\} = \int\limits_{-\pi}^\pi S_{XX}(\omega)\dfrac{d\omega}{2\pi}$ \newline
