correction in linearity and table positioning

--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -79,7 +79,7 @@ Performance of oversampling noise shaping quantizers:
 
 \subsubsection{Successive Approximation Converters}
 
-\begin{table}\centering
+\begin{center}
 \begin{tabular}{|p{0.45\textwidth}|p{0.45\textwidth}|}
 \hline
 	\multicolumn{2}{|c|}{\textbf{Conversion algorithms}}\\
@@ -110,7 +110,7 @@ Performance of oversampling noise shaping quantizers:
 		\hspace*{1cm}$b_i = u(y-x_Q)$\\
 	\hline
 \end{tabular}
-\end{table}
+\end{center}
 
 \subsection{Analog and digital dither\buchSeite{84-86}}
 Dither is a small white noise signal that is added to the input signal befor quantization. The variance of the noise is $\sigma_v^2$ and the variance of the quantization is $\sigma_e^2$. The total variance is :
