--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -1,8 +1,7 @@
-\section{Discret-Time Systems\buch{Chapter 3}}
+\section{Discrete-Time Systems\buch{Chapter 3}}
 \subsection{Linearity and time invariance\buchSeite{100-102}}
 \begin{tabular}{ll}
-\textbf{Linearity:} & If $y(n) = x(n)$ then $y(2n)=2x(n)$\\
-testing: & $x(n) = ax_1(n) + bx_2(n) \quad \underrightarrow{H} \quad y(n) = ay_1(n) + by_2(n)$\\
+\textbf{Linearity:} & $x(n) = ax_1(n) + bx_2(n) \quad \underrightarrow{H} \quad y(n) = ay_1(n) + by_2(n)$\\
 \textbf{Time invariance:} & If $y(n) = x(n)$ then $y(n+\delta) = x(n+\delta)$\\
 testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 \end{tabular}
@@ -14,7 +13,7 @@ testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 \end{tabular}
 
 
-\subsection{Finit and Infinit Impulse Respone filters\buchSeite{105,106}}
+\subsection{Finite and Infinite Impulse Response filters\buchSeite{105,106}}
 \begin{tabularx}{0.75\textwidth}{|l|X|X|}
 	\hline
 	$M$	& filter order				& 
