--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -1,4 +1,4 @@
-\section{z-Transformation\buch{Chapter 5}}
+\section{z-Transform\buch{Chapter 5}}
 
 \subsection{Basic Properties\buchSeite{183}}
 
@@ -130,14 +130,14 @@ Some Z-Transforms:\\
 \end{minipage}
 
 
-\subsection{Inverse z-Transforms\buchSeite{202-204}}
+\subsection{Inverse z-Transform\buchSeite{202-204}}
 
 $X(z) = \dfrac{N(z)}{D(z)} = \dfrac{N(z)}{(1-p_1z^{-1})(1-p_2z^{-1})\ldots(1-p_Mz^{-1})} = 
 A_0 + \dfrac{A_1}{1-p_1z^{-1}} + \ldots + \dfrac{A_M}{1-p_Mz^{-1}}$
 
 with $A_0 = X(z)|_{z=0}$ \\
 
-\textbf{PBZ\buchSeite{203}:} for Order of $N(z) <$ Order of $D(z)$ \\
+\textbf{Partial fraction expansion\buchSeite{203}:} for Order of $N(z) <$ Order of $D(z)$ \\
 \[A_i = [(1-p_iz^{-1})X(z)]_{z=p_i} = \left[\frac{N(z)}{\prod\limits_{j\neq i}(1-p_jz^{-1})}\right]_{z=p_i}\]
 
 \textbf{Euler:}
