Corrected Error at Noise Shaping; Minor Corrections

--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -29,7 +29,8 @@
 	\\ \hline
 	$\Delta B$	& saved bits without noise shaping	& $\Delta B = 0.5 \cdot log_2(L)$ \\
 				& saved bits with noise shaping		& $\Delta B = (p + 0.5) \cdot log_2(L) - 0.5 \cdot log_2\left(\frac{\pi^{2p}}{2p + 1}\right)$ \\
-				& & $L = \left(\frac{2^{2\Delta B} \pi^{2p}}{2p+1}\right)^{\frac{1}{2p+1}}$	
+	%			& & $L = \left(\frac{2^{2\Delta B} \pi^{2p}}{2p+1}\right)^{\frac{1}{2p+1}}$	
+				& & $L = 2^{\left(\frac{\Delta B + 0.5 \cdot log_2(\frac{\pi^{2p}}{2p+1})}{p+0.5} \right)}$
 	\\ \hline
 	\multicolumn{3}{l}{p = order of the noise shaping filter}
 \end{tabularx}
@@ -84,10 +85,10 @@ Dither is a small white noise signal that is added to the input signal befor qua
 \begin{equation*}
 	\sigma_{\epsilon}^2 = 
 	\begin{cases}
-		\frac{Q^2}{12} & undithered \\
-		\frac{2Q^2}{12} & rectangular dither \\
-		\frac{3Q^2}{12} & triangular dither \\
-		\frac{4Q^2}{12} & Gaussian dither \\
+		\frac{Q^2}{12} & \text{undithered} \\
+		\frac{2Q^2}{12} & \text{rectangular dither} \\
+		\frac{3Q^2}{12} & \text{triangular dither} \\
+		\frac{4Q^2}{12} & \text{gaussian dither} \\
 	\end{cases}
 \end{equation*}
 
