--- a/sections/SamplingReconstruction.tex
+++ b/sections/SamplingReconstruction.tex
@@ -1,4 +1,4 @@
-\section{Sampling and Recostruction\buch{Chapter 1}}
+\section{Sampling and Reconstruction\buch{Chapter 1}}
 \subsection{Analog Signals\buchSeite{2}}
 \begin{tabular}{llp{3cm}ll}
   $\Omega = 2\pi f$ & $[\Omega] = \frac{rad}{s}$ & &
@@ -41,7 +41,7 @@ A sampled sinusoid takes the form in these units:
 
 \subsubsection{Flat-top sampling \buchSeite{30}}
 In practical sampling each sample is held for a short period of time ($\tau$).
-\[ x_{flat}(t) =  \sum_{n=-\infty}^{\infty}x(nT)p(t - nT) ~~~ p(t) \text{: flat-top pulse with duration } \tau \]
+\[ x_{flat}(t) =  \sum_{n=-\infty}^{\infty}x(nT)p(t - nT) \qquad p(t) \text{: flat-top pulse with duration } \tau \]
 
 This is equivalent to filtering the perfectly sampled signal $\hat{x}$ with a linear filter with the impulse response $p(t)$.
 The spectrum of the filter looks like this
