--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -36,7 +36,7 @@
 	infinite geometric series 2 & $x + x^2 + x^3 + \ldots = \sum\limits_{m=1}^{\infty} x^m = \frac{x}{1-x}$ &&
 	for $|x| < 1$
 	\\ \hline
-\end{tabular}
+\end{tabular} \\
 
 If there is no ROC specified, we assume that the system is causal.
 
