Revert changed formula

--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -29,8 +29,7 @@
 	\\ \hline
 	$\Delta B$	& saved bits without noise shaping	& $\Delta B = 0.5 \cdot log_2(L)$ \\
 				& saved bits with noise shaping		& $\Delta B = (p + 0.5) \cdot log_2(L) - 0.5 \cdot log_2\left(\frac{\pi^{2p}}{2p + 1}\right)$ \\
-	%			& & $L = \left(\frac{2^{2\Delta B} \pi^{2p}}{2p+1}\right)^{\frac{1}{2p+1}}$	
-				& & $L = 2^{\left(\frac{\Delta B + 0.5 \cdot log_2(\frac{\pi^{2p}}{2p+1})}{p+0.5} \right)}$
+				& & $L = \left(\frac{2^{2\Delta B} \pi^{2p}}{2p+1}\right)^{\frac{1}{2p+1}}$	
 	\\ \hline
 	\multicolumn{3}{l}{p = order of the noise shaping filter}
 \end{tabularx}
