--- a/sections/RandomSignals.tex
+++ b/sections/RandomSignals.tex
@@ -6,7 +6,8 @@
 	probability density & $f_x(\alpha) = \frac{d}{d\alpha}F_x(\alpha)$\\
 	\hline
 	mean / expected value & $E(x) = \sum\limits_k \alpha_k P(x = \alpha_k) =
-	\int\limits_{-\infty}^{\infty}\alpha\cdot f_x(\alpha)d\alpha$
+	\int\limits_{-\infty}^{\infty}\alpha\cdot f_x(\alpha)d\alpha$ \newline
+	$E(y) = E(g(x)) = \int\limits_{-\infty}^{\infty} = g(\alpha)f_x(\alpha)d\alpha $
 	\\
 	\hline
 	signal power & $E( x^2 ) = \sum\limits_k \alpha_k^2 P(x = \alpha_k) =
@@ -19,31 +20,6 @@
 	$\sigma_x^2 = E\{ [x-E( x )]^2 \} = E(x^2) - E(x)^2 = 
 	\int\limits_{-\infty}^{\infty}[\alpha - E( x )]^2 f_x(\alpha) d\alpha $
 	\\ \hline
-	covariance &
-	$c_{xy} = Cov(x,y) = E\{(x-E(x))(y-E(y))^*\} = E(xy*) - E(x)E(y^*)$
-	\\ \hline
-  correlation &
-  $r_{xy} = E(xy^*)  \qquad r_{xy} = 0 \rightarrow$ orthogonal
-	\\ \hline
-  correlation coefficient &
-  $\rho_{xy} = \dfrac{c_{xy}}{\sigma_x\sigma_y} \qquad -1\leq \rho_{xy} \leq 1$ \newline
-  for $\rho_{xy} = 0 \rightarrow$ uncorrelated
-	\\ \hline
-	autocorrelation function & 
-	$R_{XX}(k) = E[x(n+k)x(n)]	= \dfrac{1}{N}\sum\limits_{n=0}^{N-1-k} x(n+k)x(n) \newline
-	R_{XX}(k) = R_{XX}(-k) \newline
-	R_{XX}(0) = E(x^2)$ (dirac impulse at point zero)
-	\\ \hline
-  power &
-  $\sigma_x^2 = R_{XX}(0) = E\{x(n)^2\} = \int\limits_{-\pi}^\pi S_{XX}(\omega)\dfrac{d\omega}{2\pi}$ \newline
-  $\sigma_y^2 = \int\limits_{-\pi}^\pi = S_{YY}(\omega)\dfrac{d\omega}{2\pi} = 
-  \sigma_x^2 \cdot \int\limits_{-\pi}^\pi |H(\omega)|^2 \dfrac{d\omega}{2\pi}$
-	\\ \hline
-	power spectrum & 
-	$S_{XX}(\omega) = \sum\limits_{k=-\infty}^{\infty} R_{XX}(k)e^{-j\omega k} 
-  \qquad \omega = \frac{2\pi f}{f_s} $ \newline
-  $S_{YY}(\omega) = |H(\omega)|^2 S_{XX}(\omega)$
-	\\ \hline
 	Joint distribution function &
 	$ F_{x(1),x(2)} (\alpha_1 , \alpha _2) = Pr\{ x(1) \leq \alpha _1 , x(2) \leq \alpha _2 \} $
 	\\ \hline
@@ -51,7 +27,38 @@
 	$ f_{x(1), x(2)} (\alpha _1, \alpha _2) = \dfrac{\partial^2}{\partial \alpha _1 \partial \alpha _2} F_{x(1),x(2)} 
 	(\alpha_1 , \alpha_2) $
 	\\ \hline
-	Noise reduction ration (NRR) &
+	covariance &
+	$c_{xy} = Cov(x,y) = E\{(x-E(x))(y-E(y))^*\} = E(xy*) - E(x)E(y^*)$
+	\\ \hline
+  correlation &
+  $r_{xy} = E(xy^*)  \qquad r_{xy} = 0 \rightarrow$ orthogonal; if zero mean $\rightarrow$ uncorrelated
+	\\ \hline
+  correlation coefficient &
+  $\rho_{xy} = \dfrac{c_{xy}}{\sigma_x\sigma_y} \qquad -1\leq \rho_{xy} \leq 1$ \newline
+  for $\rho_{xy} = 0 \rightarrow$ uncorrelated
+	\\ \hline
+	autocorrelation function & 
+	$R_{XX}(k) = E(x(n+k)x(n))$ \newline
+	$\hat{R}_{XX}(k) = \dfrac{1}{N}\sum\limits_{n=0}^{N-1-k} x(n+k)x(n)$ \qquad (sample autocorrelation) \newline
+	$R_{XX}(k) = R_{XX}(-k)$
+	\\ \hline
+  power &
+  $\sigma_x^2 = R_{XX}(0) = E(x(n)^2) = \int\limits_{-\pi}^\pi S_{XX}(\omega)\dfrac{d\omega}{2\pi}$ \newline
+  $\sigma_y^2 = \int\limits_{-\pi}^\pi = S_{YY}(\omega)\dfrac{d\omega}{2\pi} = 
+  \sigma_x^2 \cdot \int\limits_{-\pi}^\pi |H(\omega)|^2 \dfrac{d\omega}{2\pi}$
+	\\ \hline
+	power spectrum & 
+	$S_{XX}(\omega) = \sum\limits_{k=-\infty}^{\infty} R_{XX}(k)e^{-j\omega k} = \lim\limits_{N \rightarrow \infty}
+	E(\hat{S}_{XX}(\omega))
+  \qquad \omega = \frac{2\pi f}{f_s} $ \newline
+  $S_{YY}(\omega) = |H(\omega)|^2 S_{XX}(\omega)$
+	\\ \hline
+  periodogram spectrum & $\hat{S}_{XX}(\omega)=\dfrac{1}{N}|X_N(\omega)|^2$ \qquad with
+  $X_N(\omega) = \sum\limits_{n=0}^{N-1}x(n)e^{-j\omega n} $ \newline
+  $\hat{S}(\omega) = \dfrac{1}{K}[\hat{S}_1(\omega) + \ldots + \hat{S}_K(\omega)] = 
+  \dfrac{1}{KN}[|X_1(\omega)|^2 + \ldots + |X_K(\omega)|^2]$ \newline (with $x_i$ as block of length N)
+	\\ \hline	
+	Noise reduction ratio (NRR) &
 	$NRR = \dfrac{\sigma_y^2}{\sigma_x^2} = \int\limits_{-\pi}^\pi |H(\omega)|^2 \dfrac{d\omega}{2\pi}
 	= \sum\limits_{n} h(n)^2$
 	\\ \hline
