--- a/sections/Quantization.tex
+++ b/sections/Quantization.tex
@@ -15,7 +15,7 @@
 	\\ \hline
 	$r$	        & dynamic range         & $r = 20 log_{10}\left(2^B\right) \approx 6dB \cdot B$
 	\\ \hline
-	$SNR$		& signal-to-noise ratio	& $SNR = 20 log_{10}\left(\frac{R}{Q}\right) = 6B\, dB$
+	$SNR$		& signal-to-noise ratio (with uniform white noise)	& $SNR = 20 log_{10}\left(\frac{R}{Q}\right) = 6B\, dB$
 	\\ \hline
 	$\sigma_e^2$& average power / variance of quantization error & $\sigma_e^2 = E[e^2(n)] = \frac{Q^2}{12}$
 	\\ \hline
@@ -50,6 +50,16 @@ Performance of oversampling noise shaping quantizers:
 	\hline
 \end{tabularx}
 \resetArrayStretch
+\begin{multicols}{2}
+  Oversampled quantization noise power, whitout noise shaping.
+  
+  \includegraphics[width=7cm]{./picture/no_noise_shaping}
+  
+\columnbreak
+
+  Spectrum of oversampling noise shaping quantizer.
+  \includegraphics[width=7cm]{./picture/noise_shaping}
+\end{multicols}
 
 
 \subsection{D/A converters\buchSeite{71-73}}
