corrected a mistake in linearity and time invariance

--- a/sections/DiscretTimeSystems.tex
+++ b/sections/DiscretTimeSystems.tex
@@ -2,7 +2,7 @@
 \subsection{Linearity and time invariance\buchSeite{100-102}}
 \begin{tabular}{ll}
 \textbf{Linearity:} & $x(n) = ax_1(n) + bx_2(n) \quad \underrightarrow{H} \quad y(n) = ay_1(n) + by_2(n)$\\
-\textbf{Time invariance:} & If $y(n) = x(n)$ then $y(n+\delta) = x(n+\delta)$\\
+\textbf{Time invariance:} & If $x(n) \quad \underrightarrow{H} \quad y(n)$ then $x(n+\delta) \quad \underrightarrow{H} \quad y(n+\delta)$\\
 testing: & $x_D(n)=x(n-D)$ and $y_D(n)=y(n-D)$\\
 \end{tabular}
 
