--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -36,6 +36,7 @@
 \input{sections/Quantization}
 \input{sections/DiscretTimeSystems}
 \input{sections/FIRFilteringConvolution}
+\newpage
 \input{sections/ZTransform}
 \newpage
 \input{sections/TransferFunctions}
