--- a/sections/ZTransform.tex
+++ b/sections/ZTransform.tex
@@ -63,6 +63,7 @@ strictly \textbf{outside} the unit circle.
 	z=e^{j\omega} && \omega = \frac{2 \pi f}{f_s} \notag\\
 	X(\omega)= \sum\limits_{n=-\infty}^{\infty} x(n)e^{-j\omega n} &&  \text{(DTFT)} \notag \\
 	H(\omega)= \sum\limits_{n=-\infty}^{\infty} h(n)e^{-j\omega n} &&  \text{(frequency response)} \notag \\
+	H(\omega)= H(z)|_{z=e^{j\omega}} \notag \\
 	 -\pi \leq \omega \leq \pi && \text{nyquist interval}\notag\\
 	x(n)= \frac{1}{2\pi} \int\limits_{-\pi}^{\pi} X(\omega)e^{j\omega n} d\omega &&\text{(inverse DTFT)} \notag
 	\end{align}
@@ -74,6 +75,11 @@ Another useful relationship is Parseval’s equation, which relates the total en
 \begin{align}
 \sum_{n=-\infty}^{\infty} |x(n)|^2= \frac{1}{2\pi} \int\limits_{-\pi}^{\pi} |X(\omega)|^2 d\omega && \text{(Parseval)} \notag
 \end{align}
+
+For real valued discrete time sequences:\\
+	$X(\omega)^* = X(-\omega)$ \\
+	$|X(\omega)| = |X(\omega)|$\\
+	$argX(\omega) = -argX(-\omega)$\\
 
 Some DTFT-Transforms: \\ \\
 \begin{tabularx}{0.7\textwidth}{|l|X|}
@@ -100,7 +106,7 @@ Some DTFT-Transforms: \\ \\
 \newpage
 
 Some Z-Transforms:\\
-\begin{tabularx}{0.6\textwidth}{|X|X|X|}
+\begin{tabular}{|l|l|l|}
 	\hline
 	\textbf{x(n} ) & \textbf{X(z}) & \textbf{ROC} \\
 	\hline
@@ -114,23 +120,21 @@ Some Z-Transforms:\\
 	\hline
 	$a^n u(n)$ & $\frac{1}{1 - az^{-1}}$ & $|z|>|a| \quad$ (causal) \\
 	\hline
-	$-a^n u(-n-1)$ & $\frac{1}{1 - az^{-1}}$ & $|z|<|a| \quad$ (acausal) \\
+	$-a^n u(-n-1)$ & $\frac{1}{1 - az^{-1}}$ & $|z|<|a| \quad$ (anticausal) \\
 	\hline
 	$e^{\alpha n}$ & $\frac{z}{z-e^{\alpha}}$ & \\
 	\hline
-	$\cos(\omega n)$ & $\frac{z(z-\cos(\omega))}{z^2 -2z\cos(\omega) + 1}$ & \\
+	$\cos(\omega n)$ & $\frac{1-\cos(\omega)z^{-1}}{1-2\cos(\omega)z^{-1}+z^{-2}}
+	 = \frac{1}{2}\left[\frac{1}{1-e^{j\omega}z^{-1}}+ \frac{1}{1-e^{-j\omega}z^{-1}}\right]$ & \\
 	\hline
-	$\sin(\omega n)$ & $\frac{z\sin(\omega)}{z^2 -2z\cos(\omega) + 1}$ & \\
+	$\sin(\omega n)$ & $\frac{\sin(\omega)z^{-1}}{1-2\cos(\omega)z^{-1}+z^{-2}}
+  = \frac{1}{j2}\left[\frac{1}{1-e^{j\omega}z^{-1}}- \frac{1}{1-e^{-j\omega}z^{-1}}\right]$ & \\
 	\hline
 	$A\delta(n)$ & $A$ & \\
 	\hline
-\end{tabularx}
-\begin{minipage}[b][5.4cm][t]{5cm}
-	For real valued discrete time sequences:\\
-	$X(\omega)^* = X(-\omega)$ \\
-	$|X(\omega)| = |X(\omega)|$\\
-	$argX(\omega) = -argX(-\omega)$
-\end{minipage}
+	$A\delta(n-D)$ & $Az^{-D}$ & \\
+	\hline
+\end{tabular}
 
 
 \subsection{Inverse z-Transform\buchSeite{202-204}}
@@ -138,10 +142,12 @@ Some Z-Transforms:\\
 $X(z) = \dfrac{N(z)}{D(z)} = \dfrac{N(z)}{(1-p_1z^{-1})(1-p_2z^{-1})\ldots(1-p_Mz^{-1})} = 
 A_0 + \dfrac{A_1}{1-p_1z^{-1}} + \ldots + \dfrac{A_M}{1-p_Mz^{-1}}$
 
-with $A_0 = X(z)|_{z=0}$ \\
+with $A_0 = X(z)|_{z=0}$ otherwise $z = p_i$
 
-\textbf{Partial fraction expansion\buchSeite{203}:} for Order of $N(z) <$ Order of $D(z)$ \\
+\textbf{Partial fraction expansion\buchSeite{203}:} for Order of $N(z) \leq$ Order of $D(z)$ \\
 \[A_i = [(1-p_iz^{-1})X(z)]_{z=p_i} = \left[\frac{N(z)}{\prod\limits_{j\neq i}(1-p_jz^{-1})}\right]_{z=p_i}\]
+
+for $A_0 \rightarrow z=0$\\ \\
 
 \textbf{Euler:}
 
