--- a/DigSig1.tex
+++ b/DigSig1.tex
@@ -16,7 +16,7 @@
 % Titel und Autor
 \title{DigSig1 Formelsammlung}
 \subtitle{Dozent: G.Schuster, Buch: Introduction to Signal Processing, Orfanidis}
-\author{J.Rast, G.C.Köppel, S.Körner}
+\author{J.Rast, G.C.Köppel, S.Körner, C.Gwerder}
 
 
 \begin{document}
